--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,7 +28,21 @@ a {
 }
 
 .logo-studio {
-    color: #000;
+    
+    font-family: "Raleway", sans-serif
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em'
+    text-transform: uppercase;
+    color: #2e2f42
+}
+.logo{
+    font-family: "Raleway", sans-serif font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em'
+        color: #4d5ae5
 }
 
 .header-background {
