--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,9 +9,10 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    background-color: #FFFFFF;
     font-style: normal;
     color: #434455;
-    background-color: #ffffff;
+    
 }
 
 a {
@@ -35,6 +36,7 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em'
     text-transform: uppercase;
+    color: #ffffff
     
 }
 
@@ -248,6 +250,22 @@ p {
     letter-spacing: 0.03em;
 }
 
-.logo-studio-footer {
-    color: #FFFFFF;
-}
+.logo-footer {
+    
+            font-family: 'Raleway', sans-serif;
+            color: #4d5ae5;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 1.17;
+            letter-spacing: 0.03em;
+      }
+          .logo-studio-footer {
+            font-family: "Raleway", sans-serif font-weight: 700;
+            font-size: 18px;
+            line-height: 1.17;
+            letter-spacing: 0.03em'
+            text-transform: uppercase;
+            color: #ffffff;
+          }
+    
+      
