--- a/css/styles.css
+++ b/css/styles.css
@@ -98,27 +98,27 @@ a {
 }
 
 .hero-section {
-    background-color: #2F303A;
+    background-color: #2e2f42;
 }
 
 .hero-title {
-    color: var(--color-white);
+    color: #ffffff;
     text-align: center;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.364;
-    letter-spacing: 0.06em;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
 
 }
 
 .big-button {
     font-style: inherit;
-    color: var(--color-white);
+    color: #ffffff;
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
-    background-color: var(--color-axion);
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color: #4D5AE5;
     border: none;
     cursor: pointer;
 }
