--- a/css/styles.css
+++ b/css/styles.css
@@ -138,9 +138,6 @@ a {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-}
-
-p {
     color: #2e2f42;
 }
 
@@ -168,7 +165,7 @@ p {
     line-height: 1.2;
     letter-spacing: 0.02em;
     background-color: #FFFFFF
-    color: #2E2F42 
+    color #2E2F42 
 }
 
 .profesion {
@@ -179,84 +176,37 @@ p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     background-color:#FFFFFF
-    color: #434455
+    color #434455
 }
 
 .last-section {
     background-color: #F5F4FA;
 }
-
-.address {
-    color: var(--color-white);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.714;
-    letter-spacing: 0.03em;
+.heading-title {
+        font-family: Roboto;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.02em;
+        text-align: center;
 }
 
-
-.profile-section {
-    background-color: #F5F4FA;
+.subtitle {
+        font-family: Roboto;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
 }
 
-.button {
-    font-style: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    letter-spacing: 0.06em;
-    background-color: #F5F4FA;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-}
-
-.active-button {
-    color: var(--color-white);
-    font-style: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    letter-spacing: 0.06em;
-    background-color: var(--color-axion);
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-}
-
-.button:hover {
-    color: var(--color-white);
-    background-color: var(--color-axion);
-}
-
-.button-focus {
-    color: var(--color-white);
-    background-color: var(--color-axion);
-}
-
-.types-background {
-    background-color: #FFFFFF;
-    border: 1px solid #EEEEEE;
-}
-
-.profile-subtitle {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-}
-
-.profile-description {
-    color: var(--color-secondary);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.03em;
-}
-
-.footer-background {
-    background-color: #2e2f42
+.paragraf-prof {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
 }
 
 .logo-studio-footer {
@@ -275,13 +225,35 @@ p {
 
 }
 
-.logo-studio-footer {
-    color: #ffffff;
-    font-family: "Raleway", sans-serif
+.logo {
+    font-family: 'Raleway', sans-serif;
+    color: #4d5ae5;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
 }
 
+.logo-studio {
+    color: #2E2F42;
+    font-family: "Raleway", sans-serif
+}
 .text {
-    line-height: 1.5;
-    color: #F4F4FD;
-    letter-spacing: 0.02em
+    font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        color: #ffffff;
+}
+.footer-background {
+    background-color: #2e2f42 
+    
 }
