--- a/css/styles.css
+++ b/css/styles.css
@@ -63,21 +63,22 @@ a {
     line-height: 1.143;
     font-weight: 500;
 }
-
+.main_addres{
+    font-style: normal
+}
 .header-email {
-    color: var(--color-secondary);
+    color: #434455;
     text-decoration: none;
-    font-size: 14px;
-    line-height: 1.143;
+    font-size: 16px;
+    line-height: 1.5;
     font-weight: 500;
     letter-spacing: 0.02em;
 }
 
 .header-email:hover {
     color: #404bbf;
-    font-style: normal
 }
-
+ 
 .header-email:focus {
     color: #404bbf;
 }
@@ -149,12 +150,17 @@ a {
     color: #434455;
 }
 
+.team {
+background-color: #F4F4FD
+}
 .heading-title {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.313;
+    line-height: 1.11;
     letter-spacing: 0.03em;
-    background-color: #F4F4FD
+    background-color: #2e2f42
+    text-transform: capitalize
+    
 }
 
 .team-subtitle {
