--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 
 a {
     text-decoration: none;
+    text-transform: uppercase
 }
 
 .logo {
@@ -26,6 +27,7 @@ a {
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    text-transform: uppercase
 }
 
 .logo-studio {
@@ -45,7 +47,7 @@ a {
     line-height: 1.5;
     font-weight: 500;
     letter-spacing: 0.02em;
-    color: #2e2f42
+    color: #434455
 }
 
 .header-link:hover {
@@ -59,9 +61,10 @@ a {
 .active-link {
     color: #404bbf;
     text-decoration: none;
-    font-size: 14px;
-    line-height: 1.143;
+    font-size: 16px;
+    line-height: 1.5;
     font-weight: 500;
+    letter-spacing: 0.02em
 }
 .main_addres{
     font-style: normal
@@ -168,7 +171,7 @@ background-color: #F4F4FD
     line-height: 1.11;
     letter-spacing: 0.03em;
     background-color: #2e2f42
-    color: #2e2f42
+    color: #ffffff
 }
 
 .team-subtitle {
