--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,7 @@ background-color: #F4F4FD;
         line-height: 24px;
         letter-spacing: 0.02em;
         text-align: left;
+        color: #2e2f42;
         
 }
 
