--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,8 @@ background-color: #F4F4FD;
         line-height: 24px;
         letter-spacing: 0.02em;
         text-align: left;
-        color: #ffffff;
+        color: #F4F4FD;
+
 }
 .footer-background {
     background-color: #2e2f42;
