--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ a {
     font-style: normal
 }
 .header-email {
-    color: #434455;
+    color: #2e2f42;
     text-decoration: none;
     font-size: 16px;
     line-height: 1.5;
@@ -84,7 +84,7 @@ a {
 }
 
 .header-num {
-    color: #434455;
+    color: #2e2f42;
     text-decoration: none;
     font-size: 16px;
     line-height: 1.5;
