--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,9 @@ a {
     font-style: normal;
 }
 
+.header-num:hover.header-num:focus {
+    color: #404bbf;
+}
 
 .hero-section {
     background-color: #2e2f42;
