--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ background-color: #F4F4FD;
     line-height: 1.2;
     letter-spacing: 0.02em;
     background-color: #FFFFFF;
-    color #2E2F42 ;
+    color: #2E2F42;
 }
 
 .profesion {
@@ -185,7 +185,7 @@ background-color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
     background-color:#FFFFFF;
-    color #434455;
+    color: #434455;
 }
 
 
