--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ a {
 }
 
 .team {
-background-color: #F4F4FD;
+background-color: #FFFFFF;
 }
 
 .last-section {
@@ -174,7 +174,7 @@ background-color: #F4F4FD;
     line-height: 1.2;
     letter-spacing: 0.02em;
     background-color: #FFFFFF;
-    color: #2E2F42;
+    color: #2e2f42;
 }
 
 .profesion {
