--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,10 @@ background-color: #FFFFFF;
     color: #ffffff;
 }
 
+.heading-title{
+background-color: #FFFFFF;
+}
+
 .team-subtitle {
     font-family: roboto;
     text-align: center;
