--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ a {
 
 .header-email:hover,.header-email:focus {
     color: #404bbf;
+    background-color: #404BBF
 }
 
 .header-num {
@@ -95,6 +96,7 @@ a {
 
 .header-num:hover.header-num:focus {
     color: #404bbf;
+    background-color: #404BBF
 }
 
 .hero-section {
