--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ a {
 }
 
 .header-email:hover,.header-email:focus {
-    color: #404bbf;
+    color: #2e2f42;
     background-color: #404BBF
 }
 
@@ -95,7 +95,7 @@ a {
 }
 
 .header-num:hover.header-num:focus {
-    color: #404bbf;
+    color: #2e2f42;
     background-color: #404BBF
 }
 
