--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ a {
 
 .header-email:hover,.header-email:focus {
     color: #2e2f42;
-    background-color: #404BBF
+    background-color: #404BBF;
 }
 
 .header-num {
@@ -96,7 +96,7 @@ a {
 
 .header-num:hover.header-num:focus {
     color: #2e2f42;
-    background-color: #404BBF
+    background-color: #404BBF;
 }
 
 .hero-section {
