--- a/css/styles.css
+++ b/css/styles.css
@@ -80,8 +80,8 @@ a {
 }
 
 .header-email:hover,.header-email:focus {
-    color: #2e2f42;
-    background-color: #404BBF;
+    color: #404bbf;
+    
 }
 
 .header-num {
@@ -95,8 +95,7 @@ a {
 }
 
 .header-num:hover.header-num:focus {
-    color: #2e2f42;
-    background-color: #404BBF;
+    color: #404bbf;
 }
 
 .hero-section {
