--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ a {
     line-height: 1.5;
     font-weight: 500;
     letter-spacing: 0.02em;
-    color: #434455
+    color: #2e2f42
 }
 
 .header-link:hover {
