--- a/css/styles.css
+++ b/css/styles.css
@@ -150,8 +150,8 @@ a {
 .team {
 background-color: #F4F4FD;
 }
-.team-fon{
-    background-color: #F4F4FD;
+.team-fon {
+    background-color: #FFFFFF;
 }
 .last-section {
     background-color: #F5F4FA;
