--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,10 @@ a {
 background-color: #FFFFFF;
 }
 
+.team-fon {
+background-color: #FFFFFF;
+}
+
 .last-section {
     background-color: #F5F4FA;
     text-transform: capitalize;
