--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,7 @@ a {
     color: #2e2f42
 }
 
-.header-link:hover {
-    color: #404bbf;
-}
-
-.haeder-link:focus {
+.header-link:hover,.haeder-link:focus{
     color: #404bbf;
 }
 
