--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ a {
 .main_addres{
     font-style: normal
 }
-.header-email {
+.header-addres {
     color: #434455;
     text-decoration: none;
     font-size: 16px;
@@ -59,23 +59,9 @@ a {
     font-style: normal
 }
 
-.header-email:hover,.header-email:focus {
+.header-addres:hover,.header-addres:focus {
     color: #404bbf;
     
-}
-
-.header-num {
-    color: #434455;
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    font-style: normal;
-}
-
-.header-num:hover,.header-num:focus {
-    color: #404bbf;
 }
 
 .hero-section {
