--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,9 @@ a {
 .header-addres {
     color: #434455;
 }
-
+.main_addres {
+ font-style: normal;   
+}
 
 .hero-section {
     background-color: #2e2f42;
