--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ a {
     background-color: #ffffff;
 }
 
-.header-link {
+.header-link header-addres {
     text-decoration: none;
     font-size: 16px;
     line-height: 1.5;
