--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ a {
     color: #2e2f42
 }
 
-.header-link:hover,.haeder-link:focus{
+.header-link header-addres:hover,.haeder-link header-addres:focus{
     color: #404bbf;
 }
 
