--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ a {
     line-height: 1.5;
     font-weight: 500;
     letter-spacing: 0.02em;
-    color: #2e2f42
+    color: #2e2f42;
 }
 
 .header-link:hover {
@@ -57,7 +57,7 @@ a {
     line-height: 1.5;
     font-weight: 500;
     letter-spacing: 0.02em;
-    font-style: normal
+    font-style: normal;
 }
 
 .header-addres:hover {
