--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,10 @@
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none;}
 
+ul {
+ list-style: none;   
 }
 
 .logo {
@@ -35,7 +37,7 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;
+    color: #2e2f42;   
 }
 
 .header-link:hover {
