--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 .body-background {
     background-color: #FFFFFF;
     color: #434455;
-
+    font-family: 'Raleway', sans-serif;
 }
 
 ul {
@@ -11,7 +11,6 @@ ul {
 }
 
 .logo {
-    font-family: 'Raleway', sans-serif;
     color: #4d5ae5;
     font-weight: 700;
     font-size: 18px;
@@ -22,7 +21,6 @@ ul {
 
 .logo-studio {
     color: #2E2F42;
-    font-family: "Raleway", sans-serif
     
 }
 
@@ -33,6 +31,7 @@ ul {
 .header-link {
     font-size: 16px;
     line-height: 1.5;
+    font-weight: 500;
     letter-spacing: 0.02em;
     color: #2e2f42;   
 }
@@ -52,7 +51,7 @@ font-style: normal;
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: 0.02em;
     font-style: normal;
 }
@@ -105,7 +104,6 @@ color: #404bbf;
 }
 
 .description {
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -116,7 +114,9 @@ color: #404bbf;
 background-color: #F4F4FD;
 }
 
-
+.team-fon { 
+    background-color:#ffffff
+}
 
 .team-subtitle {
     text-align: center;
@@ -149,7 +149,7 @@ background-color: #F4F4FD;
 .subtitle {
         font-size: 20px;
         font-weight: 500;
-        line-height: 24px;
+        line-height: 1.2px;
         letter-spacing: 0.02em;
         color: #2e2f42;
         
@@ -157,8 +157,7 @@ background-color: #F4F4FD;
 
 .paragraf-prof {
         font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
+        line-height: 1.2;
         letter-spacing: 0.02em;
 }
 
@@ -195,7 +194,7 @@ background-color: #F4F4FD;
 .text {
     
         font-size: 16px;
-        line-height: 24px;
+        line-height: 1.5px;
         letter-spacing: 0.02em;
         color: #F4F4FD;
 
