--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ background-color: #F4F4FD;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize
 }
 
 .subtitle {
