--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ background-color: #F4F4FD;
 .subtitle {
         font-size: 20px;
         font-weight: 500;
-        line-height: 1.2px;
+        line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
         text-transform: capitalize;
@@ -196,7 +196,7 @@ background-color: #F4F4FD;
 .text {
     
         font-size: 16px;
-        line-height: 1.5px;
+        line-height: 1.5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
 
