--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 
 
 .body-background {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #FFFFFF;
     color: #434455;
 }
