--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     font-family: "Roboto", sans-serif;
     background-color: #FFFFFF;
     color: #434455;
+    
 }
 
 ul {
@@ -14,11 +15,14 @@ ul {
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    text-transform: uppercase
+    text-transform: uppercase;
+    text-decoration: none; 
+    
 }
 
 .logo-studio {
     color: #2E2F42;
+    
     
 }
 
@@ -31,7 +35,8 @@ ul {
     line-height: 1.5;
     font-weight: 500;
     letter-spacing: 0.02em;
-    color: #2e2f42;   
+    color: #2e2f42;  
+    text-decoration: none; 
 }
 
 .header-link:hover {
@@ -52,6 +57,7 @@ font-style: normal;
     font-weight: 400;
     letter-spacing: 0.02em;
     font-style: normal;
+    text-decoration: none; 
 }
 
 .header-addres:hover {
@@ -176,22 +182,10 @@ background-color: #F4F4FD;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    text-decoration: none; 
 
 }
 
-.logo {
-    font-family: 'Raleway', sans-serif;
-    color: #4d5ae5;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-}
-
-.logo-studio {
-    color: #2E2F42;
-    font-family: "Raleway", sans-serif;
-}
 .text {
     
         font-size: 16px;
