--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     text-decoration: none; 
+    font-family: 'Raleway', sans-serif;
     
 }
 
